[Golang Refactor - Andy's experiments] Swagger UI (#119)
