# api/openapi-spec.yaml
@@ -14,7 +14,7 @@ paths:
     /api/v1/workflows/files:
         get:
             tags:
-                - Workflows
+                - Workflows/Files
             responses:
                 '200':
                     content:
@@ -25,14 +25,14 @@ paths:
                                     $ref: '#/components/schemas/WfapiFileMetadata'
                     description: Success. The list of files is returned
                 default:
-                    description: unexpected error
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Error'
+                    description: unexpected error
             operationId: getWorkflowFiles
-            summary: Get a list of all files present and ready to be consumed by a workflow
-            description: ''
+            summary: GET /api/v1/workflows/files
+            description: 'Get a list of all files present and ready to be consumed by a workflow'
         post:
             requestBody:
                 content:
@@ -52,17 +52,18 @@ paths:
                 '409':
                     description: A file with the same name already exists
                 default:
-                    description: unexpected error
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Error'
+                    description: unexpected error
             operationId: uploadWorkflowFile
-            summary: Upload a file to be used in a workflow.
+            summary: POST /api/v1/workflows/files
+            description: Upload a file to be used in a workflow.
     '/api/v1/workflows/files/{fullFileName}':
         get:
             tags:
-                - Workflows
+                - Workflows/Files
             responses:
                 '200':
                     content:
@@ -76,16 +77,17 @@ paths:
                 '404':
                     description: The requested file was not found.
                 default:
-                    description: unexpected error
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Error'
+                    description: unexpected error
             operationId: downloadWorkflowFile
-            summary: Download a file that was previously uploaded
+            summary: GET /api/v1/workflows/files/{fullFileName}
+            description: Download a file that was previously uploaded
         delete:
             tags:
-                - Workflows
+                - Workflows/Files
             responses:
                 '204':
                     description: Success. The file has been deleted.
@@ -94,13 +96,14 @@ paths:
                 '404':
                     description: The requested file was not found.
                 default:
-                    description: unexpected error
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Error'
+                    description: unexpected error
             operationId: deleteWorkflowFile
-            summary: Delete a file that was previously uploaded
+            summary: DELETE /api/v1/workflows/files/{fullFileName}
+            description: Delete a file that was previously uploaded
         parameters:
             -
                 examples:
@@ -132,13 +135,14 @@ paths:
                         Success. The workflow has been submitted. The output is the WorkflowInfo object that
                         you can also query for at any time.
                 default:
-                    description: unexpected error
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Error'
+                    description: unexpected error
             operationId: submitWorkflow
-            summary: Submit a workflow by providing the template to use and the parameters to use with it.
+            summary: POST /api/v1/workflows
+            description: Submit a workflow by providing the template to use and the parameters to use with it.
     '/api/v1/workflows/{workflowName}':
         get:
             tags:
@@ -153,12 +157,13 @@ paths:
                 '404':
                     description: The requested workflow was not found.
                 default:
-                    description: unexpected error
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Error'
-            summary: Get the Info object of a workflow that contains the status and other information
+                    description: unexpected error
+            summary: GET /api/v1/workflows/{workflowName}
+            description: Get the Info object of a workflow that contains the status and other information
         parameters:
             -
                 name: workflowName
@@ -179,12 +184,12 @@ paths:
                 '404':
                     description: The requested workflow was not found.
                 default:
-                    description: unexpected error
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Error'
-            summary: Get the log stream of a workflow as an NDJSON stream using Server Side Events (SSE).
+                    description: unexpected error
+            summary: GET /api/v1/workflows/{workflowName}/pods/{podName}/logstream
             description: >-
                 Get the log stream of a workflow as an NDJSON stream using Server Side Events (SSE). If the
                 workflow is active in the cluster it will stream the logs from there. If it isn't, it will
@@ -206,6 +211,23 @@ paths:
                     type: string
                 in: path
                 required: true
+    /swagger:
+        get:
+            tags:
+                - Docs
+            responses:
+                '200':
+                    content:
+                        text/html: {}
+                    description: Success
+                default:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Error'
+                    description: unexpected error
+            operationId: getSwaggerUi
+            summary: Show the API documentation page
 components:
     schemas:
         WfapiFile:
@@ -328,9 +350,9 @@ components:
                 - message
             properties:
                 code:
-                    type: integer
                     format: int32
                     description: Error code
+                    type: integer
                 message:
-                    type: string
                     description: Error message
+                    type: string
