# api/wfapi.go
@@ -1,11 +1,18 @@
-//go:generate go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen --config=oapi-codegen-config.yaml ../openapi-spec.yaml
+//go:generate go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen --config=oapi-codegen-config.yaml openapi-spec.yaml
 
 package api
 
 import (
+	_ "embed"
 	"encoding/json"
+	"fmt"
+	"github.com/defenseunicorns-partnerships/wfapi/pkg/logger"
 	"net/http"
+	"sigs.k8s.io/yaml"
 )
+
+//go:embed openapi-spec.yaml
+var openApiSpec string
 
 type Server struct {
 }
@@ -25,6 +32,52 @@ func sendServerError(w http.ResponseWriter, code int, message string) {
 	}
 	w.WriteHeader(code)
 	_ = json.NewEncoder(w).Encode(wfapiErr)
+}
+
+func (s Server) GetSwaggerUi(w http.ResponseWriter, r *http.Request) {
+	openApiSpecYaml, err := yaml.Marshal(openApiSpec)
+	if err != nil {
+		sendServerError(w, http.StatusInternalServerError, "failed to marshal openapi spec")
+		return
+	}
+	openApiSpecJson, err := yaml.YAMLToJSON(openApiSpecYaml)
+	if err != nil {
+		sendServerError(w, http.StatusInternalServerError, "failed to convert yaml to json")
+		return
+	}
+	html := `<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Elements in HTML</title>
+  
+    <script src="https://unpkg.com/@stoplight/elements/web-components.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/@stoplight/elements/styles.min.css">
+  </head>
+  <body>
+
+    <elements-api
+      id="docs"
+      router="memory"
+      layout="responsive"
+    />
+   	<script>
+	  (async () => {
+		const docs = document.getElementById('docs');
+		const spec = %s
+		docs.apiDescriptionDocument = spec;
+	  })();
+	</script>
+
+  </body>
+</html>`
+
+	// Write the HTML response, injecting the OpenAPI spec
+	logger.Default().Debug("serving swagger-ui")
+	w.Header().Set("Content-Type", "text/html")
+	w.WriteHeader(http.StatusOK)
+	_, _ = w.Write([]byte(fmt.Sprintf(html, openApiSpecJson)))
 }
 
 func (s Server) SubmitWorkflow(w http.ResponseWriter, r *http.Request) {
